--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -18,6 +18,28 @@ body, html {
     overflow: hidden; /*  Disable scrollbars */
     display: block;  /* No floating content on sides */
     background: linear-gradient(white, gray, white);
+    font-family: 'Open Sans', sans-serif;
+    
+}
+
+/* Styling for the design text */
+#design {
+    position: absolute;
+    top: 90%;
+    text-align: center;
+    left: 40%;
+}
+
+/* Styling for the loading text */
+#loading {
+    font-size: 36px;
+    color: blue;
+}
+
+/* Styling for the error text */
+#error {
+    font-size: 36px;
+    color: red;
 }
 
 /* Styling for the map div */
@@ -47,4 +69,18 @@ body, html {
     width: 100%;
     height: 10%;
     text-align: center;
+}
+
+/* Lets change those link colors, no one likes purple links! */
+a:link {
+	color: #4EA2F5;
+}
+a:visited {
+	color: #4EA2F5;
+}
+a:hover {
+	color: #4E83F5;
+}
+a:active {
+	color: #4EA2F5;
 }
